2009-12-21  JMB  Qt 4 port

    Since a non-Windows pocket computer capable of running Qt 4 applications
    finally came out (namely the Nokia Internet Tablets, once the Qt 4 port
    was completed in 2008-2009), I finally decided to drop Qt 2 support for
    PortaBase.  This allowed me to clean up all the quirky code imposed by the
    old Qt API and the Qtopia environment, converting it into a fairly clean
    modern C++ application...and I documented all the code with Doxygen while
    I was at it.
    
    This is a snapshot of the code as it stands at the point where it's
    becoming useful for other people to look at it again.  I've been developing
    it on the Mac, where so far everything seems to work except for encrypted
    file support.  Before the 2.0 release I'll fix that and make sure that
    it also works on Linux, Windows, Maemo, and possibly Symbian S60 and
    Windows Mobile.

2004-05-06  JMB  Mac OS X support

    Lots of little code tweaks to make PortaBase work properly and look
    reasonably native on Mac OS X.  Also added the files needed to generate
    an application bundle.  This is the code that was submitted to
    Trolltech's Qt/Mac application developer contest.

2004-03-29  #################### PortaBase 1.9 ####################

2004-03-29  JMB  Translation updates, minor row viewer fix, etc.

    Up-to-date versions of all translations, fixed the view selection
    list in the row viewer to use more of the available width, and probably
    some other things I don't remember.

2004-03-27  JMB  Start in last used directory on recent Sharp ROMs

    Based on a patch received from Usui Makoto, PortaBase for ROMs using
    the newer file selector now starts with the directory containing the
    last-viewed file shown.

2004-03-13  JMB  Minor condition editor bugfix

    Fixed the condition editor so that the previous value is correctly
    selected when editing existing enum conditions.
